Created form outline and added basic html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,32 @@
   <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
 
   <!-- A form element that contains the following: -->
+   <header>
+
+   </header>
+
+   <main>
+   <Aside>
+    <section>
+      <h2>My First Blog</h2>
+    </section>
+   </Aside>
+
+   <section>
+      <form>
+       <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username"><br>
+       <label for="title">Title:</label><br>
+       <input type="text" id="title" name="title">
+       <label for="content">Content:</label><br>
+       <textarea id="content" placeholder="content"> </textarea>
+    
+     </form>
+     <button id="submit">Submit</button>
+  </section>
+  </main>
+  <footer></footer>
+ 
 
     <!-- An input element whose label and id are `username` -->
 
