Added form functions on form.js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- A form element that contains the following: -->
    <header>
-
+<button id="toggle">☀️</button>
    </header>
 
    <main>
@@ -28,16 +28,16 @@
    </Aside>
 
    <section>
-      <form>
+      <form id="form">
        <label for="username">Username:</label><br>
         <input type="text" id="username" name="username"><br>
        <label for="title">Title:</label><br>
        <input type="text" id="title" name="title">
        <label for="content">Content:</label><br>
        <textarea id="content" placeholder="content"> </textarea>
-    
+       <button id="submit">Submit</button>
+       <p id="error"></p>
      </form>
-     <button id="submit">Submit</button>
   </section>
   </main>
   <footer></footer>
