--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,10 @@
 <body>
 
   <!-- TODO: Create header, main, and footer elements -->
+   <header>
+    <h1>My First Blog</h1>
+    <button id="back">Back</button>
+   </header>
 
 </body>
 
