--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,6 @@
   <link rel="stylesheet" href="./assets/css/styles.css" />
   <link rel="stylesheet" href="./assets/css/blog.css" />
 
-  <script defer src="./assets/js/logic.js" type="text/javascript"></script>
-  <script defer src="./assets/js/blog.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -19,8 +17,29 @@
   <!-- TODO: Create header, main, and footer elements -->
    <header>
     <h1>My First Blog</h1>
-    <button id="back">Back</button>
+    <nav>
+      <a>
+        <button id="back">Back</button>
+        <button id="toggle">☀️</button>
+      </a>
+    </nav>
    </header>
+
+   <main>
+    
+   </main>
+
+   <footer>
+    <ul>
+      <li id ="love">Made with love by Lernantino</li>
+      <li>Portfolio: Lernantino</li>
+      <li>Blog: Full-Stack Blog</li>
+      <li>Email: Lernantino@gmail.com</li>
+    </ul>
+   </footer>
+
+   <script defer src="./assets/js/logic.js" type="text/javascript"></script>
+  <script defer src="./assets/js/blog.js" type="text/javascript"></script>
 
 </body>
 
