--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="stylesheet" href="./assets/css/form.css" />
 
-    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
-    <script defer src="./assets/js/form.js" type="text/javascript"></script>
+    
   </head>
 <body>
   <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
 
   <!-- A form element that contains the following: -->
    <header>
-<button id="toggle">☀️</button>
+    <nav>
+      <a>
+    <button id="toggle">☀️</button>
+       </a>
+    </nav>
    </header>
 
    <main>
+  
    <Aside>
-    <section>
       <h2>My First Blog</h2>
-    </section>
+  
    </Aside>
+ 
 
    <section>
       <form id="form">
@@ -51,5 +55,7 @@
 
     <!-- A p element whose id is `error` -->
 
+    <script defer src="./assets/js/logic.js" type="text/javascript"></script>
+    <script defer src="./assets/js/form.js" type="text/javascript"></script>
 </body>
 </html>
